Se agrego el nivel de porcentaje del avance en los cursos en cada barra de progreso

--- a/templates/pageLevelProgressIndicator.hbs
+++ b/templates/pageLevelProgressIndicator.hbs
@@ -3,7 +3,7 @@
 
 <span class="pagelevelprogress__indicator-inner">
 
-  <span class="pagelevelprogress__indicator-bar js-indicator-bar" style="width: {{percentageComplete}}%;"></span>
+  <span class="pagelevelprogress__indicator-bar js-indicator-bar" style="width: {{percentageComplete}}%;">{{percentageComplete}}%</span>
 
   {{#if ariaLabel}}
   <span class="aria-label js-indicator-aria-label">
